Correct spacing for navigation bar

--- a/views/css.css
+++ b/views/css.css
@@ -2,17 +2,9 @@ body {
   border: 0;
 }
 
-/*.restaurant {
-  background-image: url("https://b.zmtcdn.com/data/pictures/chains/0/6100580/5f113fc379bf1daf5e57f60ca65e7d35_featured_v2.jpg");
-  background-repeat:no-repeat;
-  background-size: 100% 100%;
-  height: 400px;
-  width: 100%;
-}*/
 .title {
    position: absolute;
-   top: 200px;
-   left: 0;
+   padding-top: 130px;
    width: 100%;
    color: white;
    text-align: center;
@@ -24,12 +16,10 @@ body {
   width: 100%;
 }
 
-.restaurant2 {
-  background-image: url("https://b.zmtcdn.com/data/pictures/chains/4/6100234/2c141df6ab0b59ed90a08084264a423b_featured_v2.jpg");
-  background-repeat:no-repeat;
-  background-size: 100% 100%;
+.restaurant {
   height: 400px;
   width: 100%;
+  display: flex;
 }
 
 #nav_bar {
@@ -38,6 +28,7 @@ body {
   position:fixed;
   width: 100%;
   padding-left: 1%;
+  padding-right: 1%;
   bottom:0;
   left:0;
   border: 20px;
