--- a/views/restaurants.css
+++ b/views/restaurants.css
@@ -1,51 +1,37 @@
-p {
-  font-size: 100px;
+body {
+  border: 0;
 }
 
-#container {
-  font-size: 200px;
+.title {
+   position: absolute;
+   padding-top: 130px;
+   width: 100%;
+   color: white;
+   text-align: center;
+   font-size: 100px;
+   font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
-
-img {
-  height: 600px;
-  width: 100%;
-  position: relative;
-}
-
-h4 {
-  font-size: 60px;
-  color: white;
-  position: absolute;
-  top: 200px;
-  left: 0;
+.restaurant img {
+  height: 450px;
   width: 100%;
 }
 
-.restaurant_title {
-  font-size: 60px;
+.restaurant {
+  height: 400px;
+  width: 100%;
+  display: flex;
 }
 
 #nav_bar {
   background-color: #4169E1;
   height: 120px;
   position:fixed;
-  width: 100%;
-  padding-left: 2%;
-  bottom:0;
-  left:0;
-  border: 20px;
+  width: 97.7%;
+  bottom: 0;
 }
 
 .home_icon {
   padding-top: 6px;
-  padding-left: 45px;
+  padding-left: 50px;
   padding-bottom: 6px;
-}
-
-.restaurant_title {
-  color: white;
-  text-align: center;
-  padding-top: 15%;
-  font-family: "Lucida Console", Monaco, monospace;
-  font-size: 80px;
 }
